<resources>
    <string name="app_name">Intents</string>
    <string name="button_contacts">Contacts</string>
    <string name="button_web">Web</string>
    <string name="button_call">Call</string>
    <string name="button_maps_one">Map using search</string>
    <string name="button_maps_two">Map using geo position</string>
    <string name="button_maps_three">Map drawing a line</string>
    <string name="pic_iti">Pic ITI</string>

    <string name="contact_title">Contact</string>
    <string name="contact_name_label">Name: </string>
    <string name="contact_phone_label">Phone: </string>
</resources>
